syntax = "proto3";

package test;

message test_object {
  int64 value = 1;
}
